k8s.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: noisonnoiton/apigateway:v1
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  ports:
    - port: 8090
      targetPort: 8090
      name: apigateway
  selector:
    app: apigateway
