apigateway-k8s.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: registry.localtest.com/apigateway:1.1
          ports:
            - containerPort: 8090
      hostAliases:
      - ip: "20.194.18.209"
        hostnames:
        - "account.skcc.co.kr"
        - "apigateway.skcc.co.kr"
        - "bff.skcc.co.kr"
        - "cart.skcc.co.kr"
        - "order.skcc.co.kr"
        - "payment.skcc.co.kr"
        - "product.skcc.co.kr"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigateway-ingress
spec:
  rules:
  - host: apigateway.skcc.co.kr
    http:
      paths:
      - path: /
        backend:
          serviceName: apigateway-svc
          servicePort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-svc
  labels:
    app: apigateway
spec:
  ports:
    - port: 8090
      targetPort: 8090
      name: apigateway-svc
  selector:
    app: apigateway
